# rubiks_cube

./: Cargo.toml
src/: cube.rs  main.rs
src/graphics/: mod.rs  shaders.rs  shaders.wgsl  vertex.rs
